--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
 	},
 	"dependencies": {
 		"react": "~15.4.1",
-		"react-native": "0.42.3"
+		"react-native": "0.42.3",
+		"react-native-vector-icons": "^4.0.0",
+		"realm": "^1.1.1"
 	},
 	"devDependencies": {
 		"babel-jest": "19.0.0",
